# basic5000_ruby

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
src/basic5000_ruby/: __init__.py  build.py  data.py  html.py  reading.py  ruby.py  validate.py
